# trannig_platform

./: .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.prod.yaml  docker-compose.production.yaml  docker-compose.yaml  index.html  main.html  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
achievements/: admin.py  apps.py  models.py  schemas.py  urls.py  views.py
achievements/migrations/: 0001_initial.py  0002_achievement_tag.py  0003_achievement_points.py  0004_alter_achievement_tag.py  (+1 more)
api/: models.py  tests.py  urls.py  views.py
authen/: admin.py  apps.py  models.py  temp_password.py  urls.py  views.py
base/: cache_utils.py  email_utils.py  permissions.py  tasks.py
competitions/: admin.py  models.py  schemas.py  services.py  urls.py  utils.py  views.py
config/: celery.py  urls.py
custumer/: admin.py  api_views.py  apps.py  context_processors.py  models.py  schemas.py  signals.py  tasks.py  urls.py  utils.py  views.py
docs/: mobile_app_api.md  mobile_app_structure.md  styles_source.md  temp_password_flow.md
employe/: admin.py  apps.py  middleware.py  models.py  signals.py  urls.py  utils.py  views.py
group_classe/: apps.py  urls.py  views.py
groups_custumer/: admin.py  apps.py  models.py  urls.py  views.py
market/: admin.py  apps.py  models.py  urls.py  views.py
mobile/: App.tsx  README.md  app.json  package.json  preview.html
news/: models.py  schemas.py  urls.py  views.py
supervisor/: urls.py  utils.py  views.py
templates/: base.html  base2.html  dashboard.html  page_404.html
(+303 files in other folders)
